# AURELIUM

./: .editorconfig  .gitattributes  .gitignore  BSL.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GO_TO_MARKET_ROADMAP.md  LICENSE  MONOREPO.md  PRD.md  README.md  ROADMAP_PRD.md  SECURITY.md  docker-compose.dev.yml  package.json  pnpm-workspace.yaml  turbo.json
.github/workflows/: ci.yml
agents/architect-agent/: main.py  requirements.txt
agents/backend-agent/: main.py
agents/devops-agent/: main.py
agents/security-agent/: main.py
api/gateway/: Cargo.toml
api/gateway/src/: main.rs
apps/simulation-lab/: .gitkeep
core/evolution-engine/: Cargo.toml
core/evolution-engine/src/: main.rs  mutation.rs  neo4j.rs
core/intent-core/: Cargo.toml
core/intent-core/src/: main.rs
core/semantic-genome/: Cargo.toml
core/semantic-genome/src/: main.rs  neo4j.rs  parser.rs
infrastructure/genomes/: capability.auth_validate.yaml  capability.db_query.yaml  capability.payment_process.yaml
infrastructure/observability/: prometheus.yml
infrastructure/postgres/: run_migrations.sh
infrastructure/postgres/migrations/: 001_init_intent_schema.sql  002_init_swarm_schema.sql  003_init_genome_schema.sql  004_init_evolution_schema.sql  005_init_tenants_schema.sql  006_init_agents_schema.sql  007_add_indexes_and_performance.sql
runtime/: .gitkeep
sdk/python/: README.md  pyproject.toml
sdk/python/aurelium_sdk/: __init__.py  client.py
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs
sdk/typescript/: package.json
sdk/typescript/src/: index.ts
simulation/: run_evolution_simulation.py  seed_genomes.py
swarm/coordination-engine/: Cargo.toml
swarm/coordination-engine/src/: main.rs
