[package]
name = "aurelium-evolution-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["json"] }
async-nats = "0.33"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
futures = "0.3"
rand = "0.8"
aurelium-sdk = { path = "../../sdk/rust" }
