[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aurelium-sdk"
version = "0.1.0"
description = "AURELIUM Python SDK client"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncio-nats-client>=2.7.0",
    "asyncpg>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
]
