[package]
name = "aurelium-sdk"
version = "0.2.0"
edition = "2021"
description = "AURELIUM SDK — Unified client for the Living Software Fabric infrastructure"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-nats = "0.33"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
